--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,9 @@ email-validator==2.1.0
 # Object Storage
 minio==7.2.0
 
+# Video Processing
+ffmpeg-python==0.2.0
+
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
